backtest btc dataset
==== 📊 BACKTEST SUMMARY ====
🔹 Total price points processed: 4277
🔹 Total grids scheduled: 771
🔹 Total grids triggered: 3987
🔹 Total grids completed (take profit hit): 3977

--- a/gridsimulation/package.json
+++ b/gridsimulation/package.json
@@ -7,5 +7,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0"
+  }
 }
